# cteflow

./: .gitignore  LICENSE  README.md  pyproject.toml
cteflow/: __init__.py  __main__.py  cli.py  parser.py  renderer.py
examples/: complex_query.sql  sample_query.sql
output/: complex_query_flow.html  sample_query_flow.html
tests/: test_parser.py
